# validator_v00

./: CMakeLists.txt  README.md
docs/: validation-framework-guide.md
include/validator/: arguments.hpp  data.hpp  validation_constraint.hpp  validation_result.hpp  validation_rule.hpp  validator.hpp
src/: main.cpp
tests/: CMakeLists.txt  validator_test.cpp
